working firebase realtime database

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "proxy": "http://localhost:3000",
+  "homepage": "https://it-spa.web.app",
   "scripts": {
     "start:db": "json-server --watch database.json",
     "start:app": "parcel ./index.html --open"
@@ -17,9 +17,10 @@
     "parcel-bundler": "^1.12.4"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
+    "database.js": "0.0.1",
+    "firebase": "^7.15.5",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1",
-    "bootstrap": "^4.4.1"
-
+    "popper.js": "^1.16.1"
   }
 }
